html_files = \
	index.html \
	bugs.html \
	debug.html \
	features.html \
	generic_design.html \
	expression.html \
	droppriv.html \
	history.html \
	how2help.html \
	install.html \
	build_from_repo.html \
	ipv6.html \
	log_rotation_fix_size.html \
	manual.html \
	man_rsyslogd.html \
	modules.html \
	property_replacer.html \
	rsyslog_ng_comparison.html \
	rsyslog_conf.html \
	rsyslog-example.conf \
	rsyslog_mysql.html \
	rsyslog_packages.html \
	rsyslog_high_database_rate.html \
	rsyslog_php_syslog_ng.html \
	rsyslog_recording_pri.html \
	rsyslog_tls.html \
	rsyslog_reliable_forwarding.html \
	rsyslog_stunnel.html \
	syslog_protocol.html \
	version_naming.html \
	contributors.html \
	dev_queue.html \
	omsnmp.html \
	omlibdbi.html \
	imfile.html \
	imtcp.html \
	imgssapi.html \
	imrelp.html \
	imuxsock.html \
	imklog.html \
	professional_support.html \
	queues.html \
	src/queueWorkerLogic.dia \
	queueWorkerLogic.jpg \
	queueWorkerLogic_small.jpg \
	tls_cert_100.jpg \
	tls_cert_ca.jpg \
	tls_cert.jpg \
	tls_cert_errmsgs.html \
	rsyslog_secure_tls.html \
	tls_cert_server.html \
	tls_cert_ca.html \
	tls_cert_summary.html \
	tls_cert_machine.html \
	tls_cert_udp_relay.html \
	tls_cert_client.html \
	tls_cert_scenario.html \
	rainerscript.html \
	rscript_abnf.html \
	rsconf1_actionexeconlywhenpreviousissuspended.html \
	rsconf1_actionresumeinterval.html \
	rsconf1_allowedsender.html \
	rsconf1_controlcharacterescapeprefix.html \
	rsconf1_debugprintcfsyslinehandlerlist.html \
	rsconf1_debugprintmodulelist.html \
	rsconf1_debugprinttemplatelist.html \
	rsconf1_dircreatemode.html \
	rsconf1_dirgroup.html \
	rsconf1_dirowner.html \
	rsconf1_dropmsgswithmaliciousdnsptrrecords.html \
	rsconf1_droptrailinglfonreception.html \
	rsconf1_dynafilecachesize.html \
	rsconf1_escapecontrolcharactersonreceive.html \
	rsconf1_failonchownfailure.html \
	rsconf1_filecreatemode.html \
	rsconf1_filegroup.html \
	rsconf1_fileowner.html \
	rsconf1_gssforwardservicename.html \
	rsconf1_gsslistenservicename.html \
	rsconf1_gssmode.html \
	rsconf1_includeconfig.html \
	rsconf1_mainmsgqueuesize.html \
	rsconf1_markmessageperiod.html \
	rsconf1_modload.html \
	rsconf1_moddir.html \
	rsconf1_repeatedmsgreduction.html \
	rsconf1_resetconfigvariables.html \
	rsconf1_umask.html \
	v3compatibility.html \
	im3195.html \
	netstream.html \
	ns_gtls.html \
	ns_ptcp.html \
	src/tls_cert.dia \
	gssapi.html \
	licensing.html \
	ommail.html \
	omrelp.html \
	status.html \
	troubleshoot.html \
	rsyslog_conf_actions.html \
	rsyslog_conf_examples.html \
	rsyslog_conf_filter.html \
	rsyslog_conf_global.html \
	rsyslog_conf_modules.html \
	rsyslog_conf_output.html \
	rsyslog_conf_templates.html \
	rsyslog_conf_nomatch.html \
	src/classes.dia

EXTRA_DIST = $(html_files)
